# cicada

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
src/: CMakeLists.txt
src/cicada/core/: CMakeLists.txt  main.cpp  preamble.h  prelude.h
src/cicada/core/preamble/: CMakeLists.txt  flag_macros.h  target_macros.h
src/cicada/core/prelude/: flag_macros.h  target_macros.h
